; ModuleID = '/home/carl/AnghaBench/jq/src/extr_jv.c_jv_object_delete.c'
source_filename = "/home/carl/AnghaBench/jq/src/extr_jv.c_jv_object_delete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@JV_KIND_OBJECT = common dso_local global i32 0, align 4
@JV_KIND_STRING = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @jv_object_delete(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %3, align 4
  %6 = load i32, i32* @JV_KIND_OBJECT, align 4
  %7 = call i32 @JVP_HAS_KIND(i32 %5, i32 %6)
  %8 = call i32 @assert(i32 %7)
  %9 = load i32, i32* %4, align 4
  %10 = load i32, i32* @JV_KIND_STRING, align 4
  %11 = call i32 @JVP_HAS_KIND(i32 %9, i32 %10)
  %12 = call i32 @assert(i32 %11)
  %13 = load i32, i32* %4, align 4
  %14 = call i32 @jvp_object_delete(i32* %3, i32 %13)
  %15 = load i32, i32* %4, align 4
  %16 = call i32 @jv_free(i32 %15)
  %17 = load i32, i32* %3, align 4
  ret i32 %17
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @JVP_HAS_KIND(i32, i32) #1

declare dso_local i32 @jvp_object_delete(i32*, i32) #1

declare dso_local i32 @jv_free(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
